--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -74,7 +74,7 @@ $blockadder-items: (
     link: link-extern,
     table-of-contents: table-of-contents,
     text: edit,
-    typewriter: wizard,
+    typewriter: block-typewriter,
     video: video2,
     accordion: block-accordion,
     list: view-list,
