Resolve "OER-Campus: Suche bleibt kommentarlos, wenn nichts gefunden wurde"

--- a/resources/assets/stylesheets/scss/oer.scss
+++ b/resources/assets/stylesheets/scss/oer.scss
@@ -426,6 +426,11 @@ ul.reviews, ol.reviews {
             }
         }
     }
+
+    .oer_no_results {
+        max-width: 840px;
+        margin-top: 20px;
+    }
 }
 
 .oer_columns {
