use ABSOLUTE_URI_STUDIP as URL for core plugins and move assets, re #796

--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -18,6 +18,7 @@
 @import "scss/courseware";
 @import "scss/dates";
 @import "scss/files";
+@import "scss/forum";
 @import "scss/fullscreen";
 @import "scss/progress_indicator.scss";
 @import "scss/my_courses";
