set button width to 100%, fixes #858

--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -191,14 +191,14 @@ div#sidebar-navigation {
     }
 
     .link-form {
-        display: inline-block;
-
         button {
             background: transparent;
             border: 0;
             color: $base-color;
             margin: 0;
             padding: 0;
+            text-align: left;
+            width: 100%;
 
             &:hover {
                 color: $active-color;
