--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -163,9 +163,9 @@ div#sidebar-navigation {
         margin-left: -5px;
         box-shadow: inset 0 0 0 1px $activity-color;
         @include arrow-right-border(14px, $activity-color-40, 1px, $activity-color, -5px);
-        a {
+        a, button {
             color: $base-color;
-            padding-left: 4px;
+            padding-left: 5px;
         }
     }
     &.sidebar-navigation > li,
@@ -190,20 +190,18 @@ div#sidebar-navigation {
         }
     }
 
-    .link-form {
-        button {
-            background: transparent;
-            border: 0;
-            color: $base-color;
-            margin: 0;
-            padding: 0;
-            text-align: left;
-            width: 100%;
+    button {
+        background: transparent;
+        border: 0;
+        color: $base-color;
+        margin: 0;
+        padding: 0;
+        text-align: left;
+        width: 100%;
 
-            &:hover {
-                color: $active-color;
-                cursor: pointer;
-            }
+        &:hover {
+            color: $active-color;
+            cursor: pointer;
         }
     }
 }
