--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -4721,3 +4721,30 @@ cw tiles end
     }
 }
 /* contents courseware courses end*/
+
+/* * * * * * * * * *
+ i n p u t  f i l e
+* * * * * * * * * */
+ .cw-file-input {
+     width: stretch;
+     border: solid thin $base-color;
+     font-size: 14px;
+    cursor: pointer;
+
+    &::file-selector-button {
+        border: none;
+        border-right: solid thin $base-color;
+        background-color: $white;
+        padding: 6px 15px;
+        margin-right: 10px;
+        color: $base-color;
+
+        &:hover {
+            background-color: $base-color;
+            color: $white;
+        }
+     }
+ }
+ /* * * * * * * * * * * * *
+ i n p u t  f i l e  e n d
+* * * * * * * * * * * * * */
