--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -46,3 +46,10 @@
     white-space: nowrap;
     width: 1px;
 }
+
+// Fix header covering relevant other areas
+// @see https://gitlab.studip.de/studip/studip/-/issues/1019
+html {
+    overflow: auto;
+    scroll-padding-top: calc(#{$bar-bottom-container-height} + 1em);
+}
