--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -4579,6 +4579,19 @@ cw tiles
         &.default-image {
                 @include background-icon(courseware, clickable, 128);
         }
+
+        .overlay-text {
+            padding: 0.25em;
+            margin: 0.25em;
+            background-color: rgba(255,255,255,0.8);
+            width: fit-content;
+            max-width: 100%;
+            height: 1.25em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            float: right;
+            text-align: right;
+        }
     }
 
     .description {
