--- a/resources/assets/stylesheets/scss/actionmenu.scss
+++ b/resources/assets/stylesheets/scss/actionmenu.scss
@@ -42,6 +42,8 @@ $action-menu-shadow: 1px 1px 1px $dark-gray-color-60;
     .action-menu-icon {
         z-index: 1;
 
+        background: transparent;
+        border: 0;
         position: relative;
         cursor: pointer;
         display: inline-block;
@@ -50,7 +52,7 @@ $action-menu-shadow: 1px 1px 1px $dark-gray-color-60;
         height: 20px;
 
         // Create animated icon that changes to close icon on activation/hover
-        div {
+        span {
             width: ($action-menu-icon-size / 4);
             height: ($action-menu-icon-size / 4);
             transform: translate((-($action-menu-icon-size / 8)), 0);
@@ -144,7 +146,7 @@ $action-menu-shadow: 1px 1px 1px $dark-gray-color-60;
     &.is-open {
         z-index: 3;
         .action-menu-icon {
-            div {
+            span {
                 border-radius: 0;
 
                 &:nth-child(1) {
