--- a/resources/assets/stylesheets/less/qrcode.less
+++ b/resources/assets/stylesheets/less/qrcode.less
@@ -1,65 +1,49 @@
-#qr_code {
-    display: none;
-    background-color: white;
-    width: 100%;
-    height: 100%;
+.qr-code-display {
+    display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    color: #444444;
-
-    .code > div {
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-    }
-
-    .code img {
-        width: 70vh;
-        height: 70vh;
-    }
-
-    .header {
-        background-image: url("@{image-path}/logos/logoklein.png");
-        height: 100px;
-        width: 100%;
-        background-repeat: no-repeat;
-        background-position: center center;
-    }
+    justify-content: center;
+    height: 100%;
+    width: 100%;
 
     h1 {
-        text-align: center;
-        font-size: 1.5em;
+        display: none;
     }
 
-    &.print-view {
-        .code img {
-            width: 170mm;
-            height: 170mm;
+    .code {
+        flex: 0 1 auto;
+        max-height: 90%; // TODO This will not scale well if description grows
+        width: 100%;
+
+        img {
+            margin: auto;
+            max-height: 100%;
+            object-fit: contain;
+        }
+    }
+
+    .url,
+    .description {
+        flex: 0 0 auto;
+        margin-top: 1em;
+    }
+
+    &:fullscreen {
+        background: var(--white);
+
+        h1 {
+            display: initial;
+            font-size: 3em;
         }
 
-        .PrintAction {
+        .code {
+            max-height: 80%;
+        }
+    }
+
+    @media not print {
+        & > img {
             display: none;
         }
-
-        .url {
-            font-size: 14px;
-        }
     }
-}
-
-#qr_code:-moz-full-screen {
-    display: flex;
-}
-
-#qr_code:-webkit-full-screen {
-    display: flex;
-}
-
-#qr_code:-ms-fullscreen {
-    display: flex;
-}
-
-#qr_code:fullscreen {
-    display: flex;
 }
