fix icons und html-structure, closes #1036
Closes #1036

Merge request studip/studip!608

--- a/resources/assets/stylesheets/less/content_box.less
+++ b/resources/assets/stylesheets/less/content_box.less
@@ -150,12 +150,12 @@ section.contentbox {
                 align-items: center;
             }
             nav {
-                a, span {
+                a, > span {
                     display: inline-block;
                     vertical-align: middle;
                 }
 
-                span {
+                > span {
                     &:last-child {
                         border-right: none;
                         padding-right: 0px;
