--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -23,6 +23,7 @@
 @import "scss/progress_indicator.scss";
 @import "scss/my_courses";
 @import "scss/oer";
+@import "scss/qrcode";
 @import "scss/report";
 @import "scss/resources";
 @import "scss/sidebar";
